--- a/index.html
+++ b/index.html
@@ -21,20 +21,25 @@
     <main>
         <section class="About">
             <div>ABOUT US</div>
+            <div><img src="./assets/UX-HTML-CSS/Vase_Dame_2048x2048.jpg" alt="Flowers in a vase"></div>
+            <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nec feugiat nisl pretium fusce id velit ut tortor pretium. Blandit libero volutpat sed cras ornare arcu dui vivamus arcu. Urna condimentum mattis pellentesque id nibh tortor id aliquet lectus. Convallis posuere morbi leo urna molestie at elementum. Et molestie ac feugiat sed. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Hac habitasse platea dictumst quisque sagittis. Sit amet nisl suscipit adipiscing bibendum est ultricies. Elit pellentesque habitant morbi tristique senectus et. Consequat nisl vel pretium lectus quam id. Duis at consectetur lorem donec massa sapien faucibus et. Ut consequat semper viverra nam. Faucibus pulvinar elementum integer enim. Sed ullamcorper morbi tincidunt ornare massa. Eget nulla facilisi etiam dignissim diam. Quam vulputate dignissim suspendisse in est ante in nibh. Mauris a diam maecenas sed enim ut. At in tellus integer feugiat scelerisque varius.
+
+                Gravida cum sociis natoque penatibus et magnis. Mauris in aliquam sem fringilla ut. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Orci nulla pellentesque dignissim enim sit amet venenatis. Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Orci a scelerisque purus semper eget duis at tellus at. Mauris a diam maecenas sed enim. Semper risus in hendrerit gravida rutrum quisque. Laoreet sit amet cursus sit amet dictum sit. Malesuada pellentesque elit eget gravida cum sociis natoque penatibus. Odio morbi quis commodo odio aenean sed adipiscing diam donec. Faucibus et molestie ac feugiat sed lectus vestibulum. Mi proin sed libero enim sed faucibus turpis in eu. Vel risus commodo viverra maecenas accumsan lacus vel facilisis. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu. Tristique et egestas quis ipsum suspendisse ultrices. Velit aliquet sagittis id consectetur purus.
+                
+                Suspendisse sed nisi lacus sed. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Non odio euismod lacinia at. Aliquet eget sit amet tellus cras adipiscing enim. Nullam vehicula ipsum a arcu cursus vitae. A arcu cursus vitae congue mauris rhoncus. Id semper risus in hendrerit gravida rutrum quisque non. Aliquam faucibus purus in massa tempor. Sit amet cursus sit amet dictum sit amet justo donec. Vel facilisis volutpat est velit. Viverra maecenas accumsan lacus vel facilisis. Aliquam etiam erat velit scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet. Non diam phasellus vestibulum lorem. Ac orci phasellus egestas tellus rutrum. Erat velit scelerisque in dictum.</p></div>
             <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img src="./assets/UX-HTML-CSS/Cylinder_unglazed3_2048x2048.jpg" alt="More flowers in a vase"></div>
         </section>
         <section class="Products">
-            <div>hello</div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>OUR PRODUCTS
+                <div><img src="./assets/UX-HTML-CSS/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="White bowl with two little white bowls"></div>
+                <div><p>Inspecting elements of a web page is also an excellent way to check the code of site elements that you like. You can copy the code to style your sites elements using CSS classes.</p></div>
+                <div><img src="./assets/UX-HTML-CSS/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Purple flower vase"></div>
+            </div>
+            
         </section>
         <section class="Contact">
-            <div>hello</div>
+            <div>CONTACT</div>
             <div></div>
             <div></div>
             <div></div>
